# brain

./: .gitignore  CMakeLists.txt  README.md  TODO.md
FancyBotBrain/: BotIrcClient.cpp  BotIrcClient.h  CMakeLists.txt  ControlClient.cpp  ControlClient.h  ControlServer.cpp  EndSceneManager.cpp  EndSceneManager.h  FancyBotBrain.cpp  FancyBotBrain.h  GameState.cpp  GameState.h  Global.h  GossipPane.cpp  GossipPane.h  GrindBot.cpp  GrindBot.h  HttpApi.cpp  HttpApi.h  IBot.h  IBotConfig.h  ICustomClass.h  Lua.cpp  Lua.h  MageClass.cpp  Mediator.cpp  Mediator.h  MerchantPane.cpp  MerchantPane.h  PathTracker.cpp  PathTracker.h  Position.cpp  Position.h  ReadMe.txt  SpellBook.cpp  SpellBook.h  Spells.cpp  Spells.h  Util.h  WoWContainer.cpp  (+19 more)
FancyBotBrain/classes/: MageClass.cpp  MageClass.h  PaladinClass.cpp  PaladinClass.h
FancyBotInjector/: CMakeLists.txt  FancyBotInjector.cpp
FindPathLib/: CMakeLists.txt  FindPathLib.cpp  FindPathLib.h  FindPathLib.vcxproj  FindPathLib.vcxproj.filters  MoveMap.cpp  MoveMap.h  MoveMapManager.cpp  MoveMapManager.h  MoveMapTile.cpp  MoveMapTile.h  PathFinder.cpp  PathFinder.h  ReadMe.txt  dllmain.cpp
FindPathLibHarness/: CMakeLists.txt  FindPathLibHarness.cpp  FindPathLibHarness.vcxproj  FindPathLibHarness.vcxproj.filters  ReadMe.txt  stdafx.cpp
Hive/: main.js  package.json  renderer.js
Hive2/: main.development.js  package.json
Hive2/app/: app.global.css  app.html  index.js  routes.js
Hive2/app/actions/: bot.js  profile.js
Hive2/app/components/: Bot.css  Bot.js  BotConfig.css  BotConfig.js  BotOverview.css  BotOverview.js  BotSelector.js  BotSummary.css  BotSummary.js  ConfigField.js  Home.js  Input.js  NpcConfig.css  NpcConfig.js  ProfileConfig.css  ProfileConfig.js
Hive2/app/containers/: App.js  BotConfigPage.js  BotOverviewPage.js  BotPage.js  BotSummaryPage.js  ProfileConfigPage.js
Hive2/app/reducers/: bot.js  index.js
Hive2/app/utils/: BotServer.js  Dialog.js  Helpers.js
dep/: CMakeLists.txt
dep/IRCClient/: CMakeLists.txt
dep/detour/: CMakeLists.txt  ReadMe.txt
dep/udis86/: .gitignore
dep/udis86/BuildVS2010/: libudis86.vcxproj  udcli.vcxproj  udcli.vcxproj.filters
dep/udis86/libudis86/: extern.h
json-stream/: .gitignore  README.md  package.json  repl-client.js  repl-server.js
json-stream/benchmarks/encoder/: encode-one.js
json-stream/benchmarks/parser/: parse-one.js
