
add_definitions(
    -DFANCYBOTBRAIN_EXPORTS
    -DWIN32
    -D_WINDOWS
    -D_USRDLL
    -DSTRICT
    -DSTRICT_TYPED_ITEMIDS
    -DUNICODE
    -D_UNICODE
    -D_CRT_SECURE_NO_WARNINGS
    -D_SCL_SECURE_NO_WARNINGS
    -DASMJIT_BUILD_X86
    -DASMJIT_BUILD_X64
    -DASMJIT_STATIC
    -DLIBUDIS86_STATIC
    -DCROW_MSVC_WORKAROUND
    -DDT_POLYREF64
    -DWINVER=0x0601
    -D_WIN32_WINNT=0x0601
    -D_VARIADIC_MAX=10
)

set(Brain_SRCS
    classes/MageClass.cpp
    classes/PaladinClass.cpp
    ControlClient.cpp
    dllmain.cpp
    EndSceneManager.cpp
    FancyBotBrain.cpp
    GameState.cpp
    GrindBot.cpp
    HttpApi.cpp
    BotIrcClient.cpp
    Lua.cpp
    Mediator.cpp
    PathTracker.cpp
    Position.cpp
    Spells.cpp
    WoWContainer.cpp
    WoWInventory.cpp
    WoWItem.cpp
    WoWObject.cpp
    WoWObjectManager.cpp
    WowOffsets.cpp
    WoWPlayer.cpp
    WoWUnit.cpp
)

set(Brain_HEADERS
    classes/MageClass.h
    classes/PaladinClass.h
    BotIrcClient.h
    ControlClient.h
    EndSceneManager.h
    FancyBotBrain.h
    GameState.h
    Global.h
    GrindBot.h
    HttpApi.h
    IBot.h
    Lua.h
    Mediator.h
    PathTracker.h
    Position.h
    Spells.h
    Util.h
    WoWContainer.h
    WoWGameObject.h
    WoWInventory.h
    WoWItem.h
    WoWObject.h
    WoWObjectManager.h
    WowOffsets.h
    WoWPet.h
    WoWPlayer.h
    WoWUnit.h
)

include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/FindPathLib
  ${CMAKE_SOURCE_DIR}/dep/detour
  ${CMAKE_SOURCE_DIR}/dep/asmjit/src
  ${CMAKE_SOURCE_DIR}/dep/IRCClient/src
  ${CMAKE_SOURCE_DIR}/dep/udis86
  ${CMAKE_SOURCE_DIR}/dep/udis86/libudis86
  ${CMAKE_SOURCE_DIR}/dep/hadesmem/include/memory
  ${Boost_INCLUDE_DIR}
)

add_library(FancyBotBrain SHARED
  ${Brain_SRCS} ${Brain_HEADERS}
)

target_link_libraries(
    FancyBotBrain
    FindPathLib
    asmjit
    ircclient
    ${Boost_LIBRARIES}
    ${SHLWAPI}
    ${UDIS}
)
